[gd_scene load_steps=7 format=2]

[ext_resource path="res://GDLAUNCHER_FILES/scrips/gdLauncherPanel.gd" type="Script" id=1]
[ext_resource path="res://GDLAUNCHER_FILES/scrips/scriptManager.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -501, -830 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "first"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1.2, 1.8, 2.3, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "open"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -501, -830 ), Vector2( -501, -254 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.203922, 0.180392, 0.372549, 1 )

[node name="gdLauncherPanel" type="Node2D"]
pause_mode = 2
position = Vector2( 525, 267 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/first = SubResource( 1 )
anims/open = SubResource( 4 )

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -523.0
margin_top = 248.0
margin_right = 499.0
margin_bottom = 262.0
text = "Press CTR + F12 to open GDLauncher menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="outsidePanelClose" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -526.0
margin_top = -267.0
margin_right = 499.0
margin_bottom = 334.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TabContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -501.0
margin_top = -830.0
margin_right = 473.0
margin_bottom = -264.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Tabs" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="Label" type="Label" parent="Panel/Main"]
margin_right = 973.0
margin_bottom = 27.0
text = "GDLauncher panel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Main"]
margin_top = 21.0
margin_right = 973.0
margin_bottom = 39.0
bbcode_enabled = true
bbcode_text = "[center][color=red]This a tool for modding, not cheating. Please do not use this to cheat in any game.[/color][/center]"
text = "This a tool for modding, not cheating. Please do not use this to cheat in any game."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switches" type="GridContainer" parent="Panel/Main"]
margin_left = 39.0
margin_top = 46.0
margin_right = 890.0
margin_bottom = 76.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ch_paused" type="CheckButton" parent="Panel/Main/switches"]
margin_right = 157.0
margin_bottom = 40.0
text = "Pause game"

[node name="ch_paused2" type="CheckButton" parent="Panel/Main/switches"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 40.0
text = "Pause game"

[node name="buttons" type="GridContainer" parent="Panel/Main"]
margin_left = 39.0
margin_top = 102.0
margin_right = 960.0
margin_bottom = 540.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_appdata" type="Button" parent="Panel/Main/buttons"]
margin_right = 166.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
text = "Open app data directory"

[node name="btn_exedir" type="Button" parent="Panel/Main/buttons"]
margin_left = 170.0
margin_right = 352.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
text = "Open executable directory"

[node name="btn_exit" type="Button" parent="Panel/Main/buttons"]
margin_left = 356.0
margin_right = 516.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
text = "Exit program"

[node name="btn_kill" type="Button" parent="Panel/Main/buttons"]
margin_left = 520.0
margin_right = 680.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
text = "Kill process"

[node name="btn_appdata5" type="Button" parent="Panel/Main/buttons"]
margin_left = 684.0
margin_right = 850.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
text = "Open app data directory"

[node name="eval" type="Tabs" parent="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="code" type="TextEdit" parent="Panel/eval"]
margin_left = 8.0
margin_top = 6.0
margin_right = 967.0
margin_bottom = 507.0
text = "#WARNING: Every error you make will crash the game, be careful
# ! THIS IS A MODDING UTILITY, DO NOT USE IT TO CHEAT !

var game = get_tree().current_scene #This allows you to interact with current scene

func _ready(): #this will run instantly
	print(\"Hello world\")
	print(\"First object of current scene is \"+game.name)

#NOTE: _physics_process(delta) and _process(delta) does not work here, if you want to use function loops like that use \"Script injection\"."
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_eval" type="Button" parent="Panel/eval"]
margin_left = 7.0
margin_top = 514.0
margin_right = 478.0
margin_bottom = 534.0
text = "EVAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_destroy_script" type="Button" parent="Panel/eval"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 496.0
margin_top = 514.0
margin_right = 967.0
margin_bottom = 534.0
text = "Destroy script"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="script injection" type="Tabs" parent="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="scriptInstances" type="Node" parent="."]
script = ExtResource( 2 )

[node name="evalScriptInstances" type="Node" parent="."]

[connection signal="pressed" from="outsidePanelClose" to="." method="_on_outsidePanelClose_pressed"]
[connection signal="toggled" from="Panel/Main/switches/ch_paused" to="." method="_on_ch_paused_toggled"]
[connection signal="pressed" from="Panel/Main/buttons/btn_appdata" to="." method="_on_btn_appdata_pressed"]
[connection signal="pressed" from="Panel/Main/buttons/btn_exedir" to="." method="_on_btn_exedir_pressed"]
[connection signal="pressed" from="Panel/Main/buttons/btn_exit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="Panel/Main/buttons/btn_kill" to="." method="_on_btn_kill_pressed"]
[connection signal="pressed" from="Panel/eval/btn_eval" to="." method="_on_btn_eval_pressed"]
[connection signal="pressed" from="Panel/eval/btn_destroy_script" to="." method="_on_btn_destroy_script_pressed"]
